REGRESSION (r141136): Wiki "Random article" function very broken. <rdar://problem/13229985> and https://bugs.webkit.org/show_bug.cgi?id=114480

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Test: http/tests/navigation/redirect-to-random-url-versus-memory-cache.html

If we are performing a conditional GET to revalidate a resource and there's a redirect,
check to see if the redirect is to a different URL than the final URL of the resource.

If the URLs differ then we should make the redirect-request unconditional and do a normal load.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::willSendRequest):

* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::makeUnconditional):

* platform/network/ResourceRequestBase.h:
(ResourceRequestBase):

LayoutTests:

* http/tests/navigation/redirect-to-random-url-versus-memory-cache-expected.txt: Added.
* http/tests/navigation/redirect-to-random-url-versus-memory-cache.html: Added.
* http/tests/navigation/resources/randomredirects/0.php: Added.
* http/tests/navigation/resources/randomredirects/1.php: Added.
* http/tests/navigation/resources/randomredirects/2.php: Added.
* http/tests/navigation/resources/randomredirects/3.php: Added.
* http/tests/navigation/resources/randomredirects/4.php: Added.
* http/tests/navigation/resources/randomredirects/5.php: Added.
* http/tests/navigation/resources/randomredirects/6.php: Added.
* http/tests/navigation/resources/randomredirects/7.php: Added.
* http/tests/navigation/resources/randomredirects/8.php: Added.
* http/tests/navigation/resources/randomredirects/9.php: Added.
* http/tests/navigation/resources/randomredirects/randomredirect.php: Added.

Canonical link: https://commits.webkit.org/133429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148929 268f45cc-cd09-0410-ab3c-d52691b4dbfc